--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,12 +7,178 @@
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+.form {
+  display: flex;
+  gap: 8px;
+  padding: 16px;
+  align-items: center;
+  justify-content: center;
+}
+
+.submit-btn {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background: rgb(255, 107, 10);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.submit-btn:hover,
+.load-more-btn:hover {
+  background-color: #010101;
+}
+
+input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 272px;
+  height: 36px;
+  background: #fff;
+  padding-left: 16px;
+}
+
+input:hover,
+input:focus {
+  border-color: #010101;
+}
+
+label {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #010101;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  padding: 16px;
+}
+
+.gallery-item {
+  border: 1px solid #808080;
+  width: 360px;
+  transition: border-color 250ms ease;
+  transition: transform 250ms ease-in-out;
+}
+
+.gallery-item:hover .title,
+.gallery-item:hover {
+  color: rgb(255, 107, 10);
+  border-color: rgb(255, 107, 10);
+  transform: scale(1.05);
+}
+
+.gallery-link {
+  display: block;
+  width: 100%;
+  height: 240px;
+  overflow: hidden;
+}
+
+.gallery-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.list-description {
+  display: flex;
+  padding: 4px 25px 4px 20px;
+  justify-content: space-between;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+}
+
+.text {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.load-more-btn {
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 125px;
+  height: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background: rgb(255, 107, 10);
+}
+
+.loader-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  display: block;
+  position: relative;
+  height: 12px;
+  width: 400px;
+  border: 1px solid #010101;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.loader::after {
+  content: '';
+  width: 40%;
+  height: 100%;
+  background: rgb(255, 107, 10);
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  animation: animloader 1500ms linear infinite;
+}
+
+@keyframes animloader {
+  0% {
+    left: 0;
+    transform: translateX(-100%);
+  }
+
+  100% {
+    left: 100%;
+    transform: translateX(0%);
+  }
+}
+
+.hidden {
+  display: none;
+}
